헤드라인/내용 완료 메인 폼 작업중

--- a/index.html
+++ b/index.html
@@ -3,9 +3,49 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Buy Our Shoes!</title>
+    <link rel="stylesheet" href="css/style.css">
+    <style>
+
+    </style>
 </head>
 <body>
-    
+    <!-- header -->
+    <header class="header">
+        <div class="inner">
+            <!-- 상단 -->
+            <div class="headline">
+                <h1>Buy Our Shoes!</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
+                <input type="button" value="구매하기" class="buy_bt">
+            </div>
+            <!-- 하단 -->
+            <div class="content">
+                <div class="content1">
+                    <h2>How we design our shoes</h2>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Totam ab, sapiente maxime enim eos consectetur minus, quaerat cupiditate culpa voluptatem distinctio qui deleniti id. Est nihil laboriosam facilis expedita consequatur!</p>
+                </div>
+                <div class="content2">
+                    <h2>How we design our shoes</h2>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Id saepe porro quas culpa veniam hic architecto eligendi autem illum aliquam. In sapiente est harum dolorum totam aperiam error mollitia repellendus.</p>
+                </div>
+            </div></div>
+    </header>
+    <!-- main -->
+    <main class="main">
+        <!-- 개인정보 -->
+         <form action="#" id="sginUp">
+            <fieldset>
+                <ul>
+                    <li>
+                        <label for="Email">your Email</label>
+                        <input type="email" id="Email">
+                    </li>
+                </ul>
+            </fieldset>
+         </form>
+
+    </main>
+
 </body>
 </html>
